# Tilepaint

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  MAINTAINERS  NEWS  README.md  build.sh  meson.build  meson_options.txt  tilepaint.doap
data/: help-overlay.blp  io.github.tobagin.Tilepaint.gschema.xml.in  meson.build  tilepaint.blp  tilepaint.css  tilepaint.desktop.in  tilepaint.metainfo.xml.in
data/icons/: meson.build
help/: meson.build
help/C/: customization.page  game.page  index.page  playing.page  strategy.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/fur/: fur.po
help/hu/: hu.po
help/id/: id.po
help/ko/: ko.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
packaging/: io.github.tobagin.Tilepaint.Devel.yml  io.github.tobagin.Tilepaint.yml
po/: POTFILES.in  ab.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  ms.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  (+5 more)
src/: generator.c  generator.h  interface.c  interface.h  main.c  main.h  meson.build  rules.c  rules.h  score.c  score.h  tilepaint.gresource.xml.in
